--- a/_posts/2014-08-25-test-post.md
+++ b/_posts/2014-08-25-test-post.md
@@ -1,6 +1,6 @@
 ---
-title: Sunt in culpa qui
-featured: images/pic02.jpg
+title: Coastal evolution modelling
+featured: images/pic2.jpg
 layout: post
 ---
 
